changed the way to create new cards so it counters some of the card's main html element properties being frozen by vm2

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "dev": "npx babel src --out-dir compiled --ignore node_modules --source-maps --copy-files --watch",
-    "compile": "npx babel src --out-dir compiled --ignore node_modules --source-maps --copy-files",
+    "dev": "npx babel src --out-dir compiled --presets @babel/preset-env --copy-files --source-maps --watch",
+    "compile": "npx babel src --out-dir compiled --presets @babel/preset-env --copy-files --no-comments --minified",
     "clean": "rm -r compiled",
-    "test": "eslint src test && nyc mocha --require babel-core/register --require babel-polyfill",
+    "test": "eslint src test && nyc mocha --require @babel/register --require @babel/polyfill",
     "pre-release": "npm version patch --no-git-tag-version && npm run clean && npm run compile",
     "release": "npm run pre-release && npm publish && git push origin development:release"
   },
@@ -52,11 +52,13 @@
     "vm2": "^3.6.3"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-transform-strict-mode": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "babel-eslint": "^9.0.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
     "electron": "^3.0.0-beta.7",
     "electron-builder": "^20.28.3",
     "eslint": "^5.4.0",
