--- a/src/extensions/sulaiman-app-launch/package.json
+++ b/src/extensions/sulaiman-app-launch/package.json
@@ -28,8 +28,5 @@
     }
   },
   "author": "Herp Project",
-  "license": "MIT",
-  "devDependencies": {
-    "sulaiman": "latest"
-  }
+  "license": "MIT"
 }
