--- a/src/extensions/sulaiman-extension-debug/package.json
+++ b/src/extensions/sulaiman-extension-debug/package.json
@@ -15,8 +15,5 @@
     ]
   },
   "author": "Herp Project",
-  "license": "UNLICENSED",
-  "devDependencies": {
-    "sulaiman": "latest"
-  }
+  "license": "UNLICENSED"
 }
