--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "npx babel src --out-dir compiled --presets @babel/preset-env --copy-files --source-maps --watch",
-    "compile": "npx babel src --out-dir compiled --presets @babel/preset-env --copy-files --no-comments --minified",
+    "compile": "npx babel src --out-dir compiled --presets @babel/preset-env --copy-files --no-comments --minified && rm -rf ./compiled/extensions/sulaiman-extension-debug",
     "clean": "rm -r compiled",
     "test": "eslint src test && nyc mocha --require @babel/register --require @babel/polyfill",
     "pre-release": "npm version patch --no-git-tag-version && npm run clean && npm run compile",
