--- a/package.json
+++ b/package.json
@@ -61,11 +61,8 @@
     "babel-eslint": "^9.0.0",
     "electron": "^3.0.0-beta.7",
     "electron-builder": "^20.28.3",
-    "eslint": "^5.4.0",
+    "eslint": "^5.5.0",
     "mocha": "^5.2.0",
-    "nyc": "^13.0.1",
-    "pidtree": "^0.3.0",
-    "puppeteer": "^1.2.0",
-    "puppeteer-to-istanbul": "^1.2.2"
+    "nyc": "^13.0.1"
   }
 }
