new way to process permissions, conflicting themes are now a thing to limit adding files directly to the head, module 'path' is allowed by default

--- a/src/extensions/sulaiman-default-dark/package.json
+++ b/src/extensions/sulaiman-default-dark/package.json
@@ -9,7 +9,8 @@
     "url": "https://gitlab.com/herpproject/sulaiman-default-dark.git"
   },
   "sulaiman": {
-    "displayName": "Default Dark"
+    "displayName": "Default Dark",
+    "theme": true
   },
   "author": "Herp Project",
   "license": "MIT"
