--- a/src/extensions/sulaiman-launch-apps/package.json
+++ b/src/extensions/sulaiman-launch-apps/package.json
@@ -25,7 +25,7 @@
       "win32"
     ],
     "credits": {
-      "KELiON\nfor his already established work on figuring this out": "https://github.com/KELiON/cerebro-basic-apps"
+      "KELiON\nfor his already established work on figuring this out": "https://www.github.com/KELiON/cerebro-basic-apps"
     }
   },
   "author": "Herp Project",
