--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,17 +21,17 @@ build:
     - npm run compile
     - npx electron-builder --win NSIS --linux AppImage
     - "echo \"{\" >> public/latest.json"
-    - "echo \"  \"build\": \"$(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]')\",\" >> public/latest.json"
-    - "echo \"  \"commit\": \"$CI_COMMIT_SHA\",\" >> public/latest.json"
-    - "echo \"  \"date\": \"$(date --utc +%FT%T.%3NZ)\",\" >> public/latest.json"
-    - "echo \"  \"windows\": \"https://gitlab.com/herpproject/Sulaiman/-/jobs/$CI_JOB_ID/artifacts/raw/public/Sulaiman-Setup.exe?job=build\",\" >> public/latest.json"
-    - "echo \"  \"linux\": \"https://gitlab.com/herpproject/Sulaiman/-/jobs/$CI_JOB_ID/artifacts/raw/public/Sulaiman.AppImage?job=build\",\" >> public/latest.json"
-    - "echo \"}\" >> public/latest.json"
+    - "echo \"  \"build\": \"$(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]')\",\" >> public/build.json"
+    - "echo \"  \"commit\": \"$CI_COMMIT_SHA\",\" >> public/build.json"
+    - "echo \"  \"date\": \"$(date --utc +%FT%T.%3NZ)\",\" >> public/build.json"
+    - "echo \"  \"win32\": \"https://gitlab.com/herpproject/Sulaiman/-/jobs/$CI_JOB_ID/artifacts/raw/public/Sulaiman-Setup.exe?job=build\",\" >> public/build.json"
+    - "echo \"  \"linux\": \"https://gitlab.com/herpproject/Sulaiman/-/jobs/$CI_JOB_ID/artifacts/raw/public/Sulaiman.AppImage?job=build\",\" >> public/build.json"
+    - "echo \"}\" >> public/build.json"
   artifacts:
     expire_in: 6 mos
     paths:
       - public/Sulaiman-Setup.exe
       - public/Sulaiman.AppImage
-      - public/latest.json
+      - public/build.json
   only:
     - release
