maybe this is better

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,13 +20,14 @@ build:
     - npm install
     - npm run compile
     - npx electron-builder --win NSIS --linux AppImage
-    - "echo \"{\" >> public/build.json"
-    - "echo \"  \"build\": \"$(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]')\",\" >> public/build.json"
-    - "echo \"  \"commit\": \"$CI_COMMIT_SHA\",\" >> public/build.json"
-    - "echo \"  \"date\": \"$(date --utc +%FT%T.%3NZ)\",\" >> public/build.json"
-    - "echo \"  \"win32\": \"https://gitlab.com/herpproject/Sulaiman/-/jobs/$CI_JOB_ID/artifacts/raw/public/Sulaiman-Setup.exe?job=build\",\" >> public/build.json"
-    - "echo \"  \"linux\": \"https://gitlab.com/herpproject/Sulaiman/-/jobs/$CI_JOB_ID/artifacts/raw/public/Sulaiman.AppImage?job=build\",\" >> public/build.json"
-    - "echo \"}\" >> public/build.json"
+    - "echo \" {
+  \"build\": \"$(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]')\",
+  \"commit\": \"$CI_COMMIT_SHA\",
+  \"date\": \"$(date --utc +%FT%T.%3NZ)\",
+  \"win32\": \"https://gitlab.com/herpproject/Sulaiman/-/jobs/$CI_JOB_ID/artifacts/raw/public/Sulaiman-Setup.exe?job=build\",
+  \"linux\": \"https://gitlab.com/herpproject/Sulaiman/-/jobs/$CI_JOB_ID/artifacts/raw/public/Sulaiman.AppImage?job=build\"
+}\" >> public/build.json"
+    - "echo } >> public/build.json"
   artifacts:
     expire_in: 6 mos
     paths:
