--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,10 +23,10 @@ build:
     - "echo $(node -e \"
     console.log(
       JSON.stringify({
-        build: process.argv[1]
-        commit: process.argv[2]
-        date: process.argv[3]
-        win32: process.argv[4]
+        build: process.argv[1],
+        commit: process.argv[2],
+        date: process.argv[3],
+        win32: process.argv[4],
         linux: process.argv[5]
       }));
     \"
