building auto-update

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,29 @@ stages:
   # - test
   - build
 
+variables: {
+    PACKAGE_TYPE: "",
+    BUILD_JSON: 
+      "node -e \"
+      console.log(
+      JSON.stringify({
+        build: process.argv[1],
+        commit: process.argv[2],
+        date: process.argv[3],
+        current: process.argv[4]
+        nsis: process.argv[5],
+        appImage: process.argv[6]
+      }));
+      \"
+      $(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]')
+      $CI_COMMIT_SHA
+      $(date --utc +%FT%T.%3NZ)
+      $PACKAGE_TYPE
+      https://gitlab.com/herpproject/Sulaiman/-/jobs/$CI_JOB_ID/artifacts/raw/public/Sulaiman-Setup.exe?job=build
+      https://gitlab.com/herpproject/Sulaiman/-/jobs/$CI_JOB_ID/artifacts/raw/public/Sulaiman.AppImage?job=build
+      "
+}
+
 # test:
 #   stage: test
 #   script:
@@ -19,28 +42,16 @@ build:
   script:
     - npm install
     - npm run compile
-    - npx electron-builder --win NSIS --linux AppImage
-    - "echo $(node -e \"
-    console.log(
-      JSON.stringify({
-        build: process.argv[1],
-        commit: process.argv[2],
-        date: process.argv[3],
-        win32: process.argv[4],
-        linux: process.argv[5]
-      }));
-    \"
-    $(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]') 
-    $CI_COMMIT_SHA 
-    $(date --utc +%FT%T.%3NZ) 
-    https://gitlab.com/herpproject/Sulaiman/-/jobs/$CI_JOB_ID/artifacts/raw/public/Sulaiman-Setup.exe?job=build 
-    https://gitlab.com/herpproject/Sulaiman/-/jobs/$CI_JOB_ID/artifacts/raw/public/Sulaiman.AppImage?job=build
-  ) >> public/build.json"
+    - "PACKAGE_TYPE='nsis' && echo $BUILD_JSON >> build.json"
+    - npx electron-builder --win NSIS
+    - "PACKAGE_TYPE='appImage' && rm build.json && echo $BUILD_JSON >> build.json"
+    - npx electron-builder --linux AppImage
+    - "PACKAGE_TYPE='ci' && rm build.json && echo $BUILD_JSON >> build.json"
   artifacts:
     expire_in: 6 mos
     paths:
       - public/Sulaiman-Setup.exe
       - public/Sulaiman.AppImage
-      - public/build.json
+      - build.json
   only:
     - release
