--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,28 +8,13 @@ stages:
 
 variables: {
     PACKAGE_TYPE: "null",
-    VERSION: "cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]'",
-    DATE: "date --utc +%FT%T.%3NZ",
+    VERSION: "$(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]')",
+    DATE: "$(date --utc +%FT%T.%3NZ)",
     EXE_URL: "https://gitlab.com/herpproject/Sulaiman/-/jobs/$CI_JOB_ID/artifacts/raw/public/Sulaiman-Setup.exe?job=build",
     APPIMAGE_URL: "https://gitlab.com/herpproject/Sulaiman/-/jobs/$CI_JOB_ID/artifacts/raw/public/Sulaiman.AppImage?job=build",
     BUILD_JSON:
-      "node -e \"
-      console.log(
-      JSON.stringify({
-        build: process.argv[1],
-        commit: process.argv[2],
-        date: process.argv[3],
-        current: process.argv[4],
-        nsis: process.argv[5],
-        appImage: process.argv[6]
-      }));\"",
-    BUILD_JSON_ARGS:
-      "$(VERSION)
-      $CI_COMMIT_SHA
-      $(DATE)
-      $PACKAGE_TYPE
-      $EXE_URL
-      $APPIMAGE_URL"
+      "node -e \"console.log(JSON.stringify({ build: process.argv[1], commit: process.argv[2], date: process.argv[3], current: process.argv[4], nsis: process.argv[5], appImage: process.argv[6] }));\"",
+    BUILD_JSON_ARGS: "$VERSION $CI_COMMIT_SHA $DATE $PACKAGE_TYPE $EXE_URL $APPIMAGE_URL"
 }
 
 # test:
