we are here all night

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,11 +30,11 @@ build:
   script:
     - npm install
     - npm run compile
-    - "PACKAGE_TYPE='nsis' && echo $(\"$BUILD_JSON $BUILD_JSON_ARGS\") >> build.json"
+    - "PACKAGE_TYPE='nsis' && echo $(\"$BUILD_JSON\") >> build.json"
     # - npx electron-builder --win NSIS
     # - "PACKAGE_TYPE='appImage' && rm build.json && echo $($BUILD_JSON) >> build.json"
     # - npx electron-builder --linux AppImage
-    - "PACKAGE_TYPE='ci' && rm build.json && echo $(\"$BUILD_JSON $BUILD_JSON_ARGS\") >> build.json"
+    - "PACKAGE_TYPE='ci' && rm build.json && echo $(\"$BUILD_JSON\") >> build.json"
   artifacts:
     expire_in: 6 mos
     paths:
