--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ variables: {
     EXE_URL: "https://gitlab.com/herpproject/Sulaiman/-/jobs/$CI_JOB_ID/artifacts/raw/public/Sulaiman-Setup.exe?job=build",
     APPIMAGE_URL: "https://gitlab.com/herpproject/Sulaiman/-/jobs/$CI_JOB_ID/artifacts/raw/public/Sulaiman.AppImage?job=build",
     BUILD_JSON:
-      "node -e \"console.log(JSON.stringify({ build: process.argv[1], commit: process.argv[2], date: process.argv[3], current: process.argv[4], nsis: process.argv[5], appImage: process.argv[6] }));\"",
+      "console.log(JSON.stringify({ build: process.argv[1], commit: process.argv[2], date: process.argv[3], current: process.argv[4], nsis: process.argv[5], appImage: process.argv[6] }));",
     BUILD_JSON_ARGS: "$VERSION $CI_COMMIT_SHA $DATE $PACKAGE_TYPE $EXE_URL $APPIMAGE_URL"
 }
 
@@ -29,11 +29,11 @@ build:
   script:
     - npm install
     - npm run compile
-    - "echo $(\"$BUILD_JSON\") >> build.json"
+    - "echo \"node -e $BUILD_JSON\" >> build.json"
     # - npx electron-builder --win NSIS
     # - "PACKAGE_TYPE='appImage' && rm build.json && echo $($BUILD_JSON) >> build.json"
     # - npx electron-builder --linux AppImage
-    - "rm build.json && echo $(\"$BUILD_JSON\") >> build.json"
+    - "rm build.json && echo \"node -e $BUILD_JSON\"  >> build.json"
   artifacts:
     expire_in: 6 mos
     paths:
