--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,7 @@ build:
     # - npx electron-builder --win NSIS
     # - "PACKAGE_TYPE='appImage' && rm build.json && echo $($BUILD_JSON) >> build.json"
     # - npx electron-builder --linux AppImage
-    - "echo $(node -e \"$BUILD_JSON\" $($VERSION) $CI_COMMIT_SHA $($DATE) $PACKAGE_TYPE $EXE_URL $APPIMAGE_URL) >> build.json"
+    - "echo $(node -e \"$BUILD_JSON\" $(\"$VERSION\") $CI_COMMIT_SHA $(\"$DATE\") $PACKAGE_TYPE $EXE_URL $APPIMAGE_URL) >> build.json"
   artifacts:
     expire_in: 6 mos
     paths:
