--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ stages:
 variables: {
     EXE_URL: "https://gitlab.com/herpproject/Sulaiman/-/jobs/$CI_JOB_ID/artifacts/raw/public/Sulaiman-Setup.exe?job=build",
     APPIMAGE_URL: "https://gitlab.com/herpproject/Sulaiman/-/jobs/$CI_JOB_ID/artifacts/raw/public/Sulaiman.AppImage?job=build",
+    URLS: "$EXE_URL $APPIMAGE_URL",
     BUILD_JSON:
       "console.log(JSON.stringify({ build: process.argv[1], commit: process.argv[2], date: process.argv[3], current: process.argv[4], nsis: process.argv[5], appImage: process.argv[6] }));"
 }
@@ -33,7 +34,7 @@ build:
     # - npx electron-builder --win NSIS
     # - "PACKAGE_TYPE='appImage' && rm build.json && echo $($BUILD_JSON) >> build.json"
     # - npx electron-builder --linux AppImage
-    - "echo $(node -e \"$BUILD_JSON\" $VERSION $CI_COMMIT_SHA $DATE \"CI\" $EXE_URL $APPIMAGE_URL) >> build.json"
+    - "echo $(node -e \"$BUILD_JSON\" $VERSION $CI_COMMIT_SHA $DATE \"CI\" $URLS) >> build.json"
   artifacts:
     expire_in: 6 mos
     paths:
